pi/sdpi.css
html {
    --sdpi-bgcolor: #2D2D2D;
    --sdpi-background: #3D3D3D;
    --sdpi-color: #d8d8d8;
    --sdpi-bordercolor: #3a3a3a;
    --sdpi-borderradius: 0px;
    --sdpi-width: 224px;
    --sdpi-fontweight: 600;
    --sdpi-letterspacing: -0.25pt;
    height: 100%;
    width: 100%;
    overflow: hidden;
  }
  
  html, body {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
    font-size: 9pt;
      background-color: var(--sdpi-bgcolor);
      color: #9a9a9a;
  }
  
  body {
    height: 100%;
    padding: 0;
    overflow-x: hidden;
    overflow-y: auto;
    margin: 0;
    -webkit-overflow-scrolling: touch;
    -webkit-text-size-adjust: 100%;
    -webkit-font-smoothing: antialiased;
  }
  
  mark {
    background-color: var(--sdpi-bgcolor);
    color: var(--sdpi-color);
  }
  
  hr, hr2 {
    -webkit-margin-before: 1em;
    -webkit-margin-after: 1em;
    border-style: none;
    background: var(--sdpi-background);
    height: 1px;
  }
  
  hr2,
  .sdpi-heading {
      display: flex;
      flex-basis: 100%;
      align-items: center;
      color: inherit;
      font-size: 9pt;
      margin: 8px 0px;
  }
  
  .sdpi-heading::before,
  .sdpi-heading::after {
      content: "";
      flex-grow: 1;
      background: var(--sdpi-background);
      height: 1px;
      font-size: 0px;
      line-height: 0px;
      margin: 0px 16px;
  }
  
  hr2 {
    height: 2px;
  }
  
  hr, hr2 {
    margin-left:16px;
    margin-right:16px;
  }
  
  .sdpi-item-value,
  option,
  input,
  select,
  button {
    font-size: 10pt;
    font-weight: var(--sdpi-fontweight);
    letter-spacing: var(--sdpi-letterspacing);
  }
  
  
  
  .win .sdpi-item-value,
  .win option,
  .win input,
  .win select,
  .win button {
    font-size: 11px;
    font-style: normal;
    letter-spacing: inherit;
    font-weight: 100;
  }
  
  .win button {
    font-size: 12px;
  }
  
  ::-webkit-progress-value,
  meter::-webkit-meter-optimum-value {
    border-radius: 2px;
    /* background: linear-gradient(#ccf, #99f 20%, #77f 45%, #77f 55%, #cdf); */
  }
  
  ::-webkit-progress-bar,
  meter::-webkit-meter-bar {
    border-radius: 3px;
    background: var(--sdpi-background);
  }
  
  ::-webkit-progress-bar:active,
  meter::-webkit-meter-bar:active {
    border-radius: 3px;
    background: #222222;
  }
  ::-webkit-progress-value:active,
  meter::-webkit-meter-optimum-value:active {
    background: #99f;
  }
  
  progress,
  progress.sdpi-item-value {
    min-height: 5px !important;
    height: 5px;
    background-color: #303030;
  }
  
  progress {
    margin-top: 8px !important;
    margin-bottom: 8px !important;
  }
  
  .full progress,
  progress.full {
    margin-top: 3px !important;
  }
  
  ::-webkit-progress-inner-element {
    background-color: transparent;
  }
  
  
  .sdpi-item[type="progress"] {
    margin-top: 4px !important;
    margin-bottom: 12px;
    min-height: 15px;
  }
  
  .sdpi-item-child.full:last-child {
    margin-bottom: 4px;
  }
  
  .tabs {
    /**
     * Setting display to flex makes this container lay
     * out its children using flexbox, the exact same
     * as in the above "Stepper input" example.
     */
    display: flex;
  
    border-bottom: 1px solid #D7DBDD;
  }
  
  .tab {
    cursor: pointer;
    padding: 5px 30px;
    color: #16a2d7;
    font-size: 9pt;
    border-bottom: 2px solid transparent;
  }
  
  .tab.is-tab-selected {
    border-bottom-color: #4ebbe4;
  }
  
  select {
    -webkit-appearance: none;
    -moz-appearance: none;
    -o-appearance: none;
    appearance: none;
    background: url(caret.svg) no-repeat 97% center;
  }
  
  label.sdpi-file-label,
  input[type="button"],
  input[type="submit"],
  input[type="reset"],
  input[type="file"],
  input[type=file]::-webkit-file-upload-button,
  button,
  select {
    color: var(--sdpi-color);
    border: 1pt solid #303030;
    font-size: 8pt;
    background-color: var(--sdpi-background);
    border-radius: var(--sdpi-borderradius);
  }
  
  label.sdpi-file-label,
  input[type="button"],
  input[type="submit"],
  input[type="reset"],
  input[type="file"],
  input[type=file]::-webkit-file-upload-button,
  button {
    border: 1pt solid var(--sdpi-color);
    border-radius: var(--sdpi-borderradius);
    min-height: 23px !important;
    height: 23px !important;
    margin-right: 8px;
  }
  
  input[type=number]::-webkit-inner-spin-button,
  input[type=number]::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0;
  }
  
  input[type="file"] {
    border-radius: var(--sdpi-borderradius);
    max-width: 220px;
  }
  
  option {
    height: 1.5em;
    padding: 4px;
  }
  
  /* SDPI */
  
  .sdpi-wrapper {
    overflow-x: hidden;
  }
  
  .sdpi-item {
    display: flex;
    flex-direction: row;
    min-height: 32px;
    align-items: center;
    margin-top: 2px;
    max-width: 344px;
  }
  
  .sdpi-item:first-child {
    margin-top:1px;
  }
  
  .sdpi-item:last-child {
    margin-bottom: 0px;
  }
  
  .sdpi-item > *:not(.sdpi-item-label):not(meter):not(details) {
    min-height: 26px;
    padding: 0px 4px 0px 4px;
  }
  
  .sdpi-item > *:not(.sdpi-item-label.empty):not(meter) {
    min-height: 26px;
    padding: 0px 4px 0px 4px;
  }
  
  
  .sdpi-item-group {
    padding: 0 !important;
  }
  
  meter.sdpi-item-value {
    margin-left: 6px;
  }
  
  .sdpi-item[type="group"] {
    display: block;
    margin-top: 12px;
    margin-bottom: 12px;
    /* border: 1px solid white; */
    flex-direction: unset;
    text-align: left;
  }
  
  .sdpi-item[type="group"] > .sdpi-item-label,
  .sdpi-item[type="group"].sdpi-item-label {
    width: 96%;
    text-align: left;
    font-weight: 700;
    margin-bottom: 4px;
    padding-left: 4px;
  }
/* ... */

